# noaa-mrms-qpe

./: .gitignore  CHANGELOG.md  README.md  docker_env  environment.yml  mypy.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml  release.yml
examples/: collection.json  item-conus.json  item-guam.json  item.json  item_grib.json
examples/cog/: collection.json  item.json
examples/grib/: collection.json  item.json
extension/: README.md  schema.json
notebooks/: qpe-data-check.ipynb
scripts/: test
src/stactools/noaa_mrms_qpe/: __init__.py  cog.py  commands.py  constants.py  fileinfo.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/HAWAII/: MRMS_MultiSensor_QPE_72H_Pass2_00.00_20220601-230000.grib2
tests/data-files/: collection-1-1.json
tests/data-files/GUAM/: MRMS_MultiSensor_QPE_01H_Pass1_00.00_20220601-120000.json
