[metadata]
name = stactools-noaa-mrms-qpe
version = attr: stactools.noaa_mrms_qpe.__version__
description = stactools package for NOAA''s Multi-Radar Multi-Sensor Quantitative Precipitation Estimation dataset
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/noaa-mrms-qpe
project_urls =
    Issues = https://github.com/stactools-packages/noaa-mrms-qpe/issues
keywords =
    stactools
    noaa
    mrms
    qpe
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    python-dateutil >= 2.7.0
    types-python-dateutil >= 2.7.0
    stactools >= 0.3.1

[options.packages.find]
where = src
